--- a/app/src/main/res/layout/activity_listade_proyectos.xml
+++ b/app/src/main/res/layout/activity_listade_proyectos.xml
@@ -20,7 +20,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_listade_proyectos" />
+    <include layout="@layout/content_listade_proyectos"
+        android:id="@+id/include" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -29,5 +30,14 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
+
+    <TextView
+        android:id="@+id/prueba"
+        android:layout_width="125dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:text="TextView"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="center_vertical|left" />
 
 </android.support.design.widget.CoordinatorLayout>
