--- a/app/src/main/res/layout/content_agregar_nuevo_proyecto.xml
+++ b/app/src/main/res/layout/content_agregar_nuevo_proyecto.xml
@@ -57,16 +57,8 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="Inicio"
+                    android:focusable="false"
                     android:inputType="textPersonName" />
-
-                <Button
-                    android:id="@+id/botonini"
-                    style="@android:style/Widget.DeviceDefault.Button.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="@string/caledario" />
 
             </LinearLayout>
 
@@ -91,6 +83,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="Fecha limite."
+                    android:focusable="false"
                     android:inputType="textPersonName" />
 
                 <CheckBox
@@ -100,16 +93,13 @@
                     android:layout_weight="1"
                     android:text="No considerar." />
 
-                <Button
-                    android:id="@+id/botonfin"
-                    style="@android:style/Widget.DeviceDefault.Button.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="@string/caledario" />
-
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/prueba"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
 
         </LinearLayout>
 
